--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -140,7 +140,7 @@ body.aspectTooGood.hiddenToolbar {
       display: none;
     }
 
-    @media (min-height: 440px) {
+    @media (min-height: 380px) {
       body.wideToolbar #toolbar > img {
         display: block;
         margin: 10px 20px 3px 20px;
@@ -149,6 +149,30 @@ body.aspectTooGood.hiddenToolbar {
       body.wideToolbar #toolbar .divider:nth-child(2) {
         display: block;
         margin: 20px 10%;
+      }
+    }
+
+    @media (max-height: 520px) {
+      body.wideToolbar #toolbar {
+        padding: 0;
+      }
+      body.wideToolbar #toolbar > img {
+        margin: 10px 20px;
+      }
+      body.wideToolbar #toolbar .divider:nth-child(2) {
+        display: none;
+      }
+    }
+
+    @media (max-height: 420px) {
+      body:not(.wideToolbar,.horizontalToolbar,.aspectTooGood) #toolbar {
+        padding: 0;
+      }
+    }
+
+    @media (max-width: 760px) {
+      body.aspectTooGood #toolbar {
+        padding: 0;
       }
     }
 
@@ -177,6 +201,24 @@ body.aspectTooGood.hiddenToolbar {
       border-left: 1px solid #fff8;
       height: 80%;
       margin: auto 10px;
+    }
+
+    @media (max-height: 520px) {
+      body.wideToolbar #toolbar .divider {
+        display: none;
+      }
+    }
+
+    @media (max-height: 420px) {
+      body:not(.wideToolbar,.horizontalToolbar,.aspectTooGood) #toolbar .divider {
+        display: none;
+      }
+    }
+
+    @media (max-width: 760px) {
+      body.aspectTooGood #toolbar .divider {
+        display: none;
+      }
     }
 
   /* buttons */
@@ -226,6 +268,24 @@ body.aspectTooGood.hiddenToolbar {
       justify-content: flex-end;
     }
 
+    @media (max-height: 520px) {
+      body.wideToolbar .toolbarButton:not(.toolbarTab) {
+        padding: 2px 10%;
+      }
+    }
+
+    @media (max-height: 420px) {
+      body:not(.wideToolbar,.horizontalToolbar,.aspectTooGood) .toolbarButton:not(.toolbarTab) {
+        padding: 2px;
+      }
+    }
+
+    @media (max-width: 760px) {
+      body.aspectTooGood #toolbar .toolbarButton:not(.toolbarTab) {
+        padding: 2px;
+      }
+    }
+
     @media (max-width: 530px) {
       body.horizontalToolbar .toolbarButton:not(.toolbarTab) {
         padding: 2px;
@@ -260,6 +320,24 @@ body.aspectTooGood.hiddenToolbar {
       margin: auto 2px 0 2px;
       padding: 0 16px;
       width: unset;
+    }
+
+    @media (max-height: 520px) {
+      body.wideToolbar .toolbarTab {
+        height: 30px;
+      }
+    }
+
+    @media (max-height: 420px) {
+      body:not(.wideToolbar,.horizontalToolbar,.aspectTooGood) .toolbarTab {
+        height: 30px;
+      }
+    }
+
+    @media (max-width: 760px) {
+      body.aspectTooGood #toolbar .toolbarTab {
+        height: 30px;
+      }
     }
 
     @media (min-width: 950px) {
@@ -417,61 +495,73 @@ body.aspectTooGood.hiddenToolbar {
       display: none;
     }
 
-    @media (max-height: 520px) {
+    @media (max-height: 120px) {
       body.wideToolbar #editButton, body.wideToolbar #addButton {
         display: none;
       }
     }
 
-    @media (max-width: 760px) {
-      body.aspectTooGood #editButton, body.aspectTooGood #addButton {
-        display: none;
-      }
-    }
-
-    @media (max-height: 420px) {
-      body:not(.wideToolbar,.horizontalToolbar,.aspectTooGood) #editButton, body:not(.wideToolbar,.horizontalToolbar,.aspectTooGood) #addButton {
-        display: none;
-      }
-    }
-
-    @media (max-height: 340px) {
+    @media (max-height: 290px) {
       body:not(.horizontalToolbar,.aspectTooGood) .divider, body:not(.horizontalToolbar,.aspectTooGood) #optionsButton, body:not(.horizontalToolbar,.aspectTooGood) #lightsButton {
         display: none;
       }
     }
 
-    @media (max-width: 630px) {
+    @media (max-width: 550px) {
       body.aspectTooGood .divider, body.aspectTooGood #optionsButton, body.aspectTooGood #lightsButton {
         display: none;
       }
     }
 
-    @media (max-height: 240px) {
-      body:not(.horizontalToolbar) #aboutButton {
+    @media (max-width: 460px) {
+      body.aspectTooGood #addButton {
         display: none;
       }
     }
 
-    @media (max-width: 490px) {
-      body.aspectTooGood #aboutButton {
+    @media (max-height: 230px) {
+      body:not(.horizontalToolbar) #addButton {
         display: none;
       }
     }
 
     @media (max-height: 200px) {
+      body:not(.horizontalToolbar) #aboutButton {
+        display: none;
+      }
+    }
+
+    @media (max-width: 410px) {
+      body.aspectTooGood #aboutButton {
+        display: none;
+      }
+    }
+
+    @media (max-width: 360px) {
+      body.aspectTooGood #editButton {
+        display: none;
+      }
+    }
+
+    @media (max-height: 170px) {
+      body:not(.horizontalToolbar) #editButton {
+        display: none;
+      }
+    }
+
+    @media (max-height: 140px) {
       body:not(.horizontalToolbar) #playersButton {
         display: none;
       }
     }
 
-    @media (max-width: 420px) {
+    @media (max-width: 300px) {
       body.aspectTooGood #playersButton {
         display: none;
       }
     }
 
-    @media (max-width: 350px) {
+    @media (max-width: 250px) {
       body.aspectTooGood #hideToolbarButton {
         display: none;
       }
