--- a/client/css/widgets/card.css
+++ b/client/css/widgets/card.css
@@ -8,10 +8,6 @@ body.edit .card {
 
 .card > .cardFace {
   display: none;
-}
-
-.card > .active.cardFace {
-  display: block;
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -19,7 +15,11 @@ body.edit .card {
   box-sizing: border-box;
 }
 
-.card > .active.cardFace > .cardFaceObject {
+.card > .active.cardFace {
+  display: block;
+}
+
+.card > .cardFace > .cardFaceObject {
   position: absolute;
   background-size: contain;
   background-repeat: no-repeat;
