Don't target foreign holders even if they're close - fixes #1651

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -658,6 +658,10 @@ div[icon] .buttons {
   -moz-user-select: none;
 }
 
+.widget.foreign {
+  --foreign:true;
+}
+
 body:not(.jsonEdit) .widget.foreign {
   display: none !important;
 }
