shift-clicking a module button now opens it as an overlay above the room

--- a/client/css/editor/sidebar.css
+++ b/client/css/editor/sidebar.css
@@ -169,6 +169,15 @@
   overflow: auto;
 }
 
+#editorModuleInOverlay {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  top: 10px;
+  bottom: 10px;
+  overflow: auto;
+}
+
 #editorModuleTopLeft {
   grid-area: topleft;
 }
