added the delta cause to the delta and the undo protocol

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -3,11 +3,13 @@
 .undo.editorModule > div {
   padding: 2px;
   color: var(--textDimColor1);
+  cursor: pointer;
 }
 
 .undo.editorModule > div.active {
   color: var(--textColor);
   background: var(--backgroundHighlightColor1);
+  cursor: unset;
 }
 
 .undo.editorModule > div.active ~ div {
