Initial test of Roboto-Symbols font

--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Roboto";
-    src: url("i/fonts/Roboto-Regular.ttf") format("truetype");
+    src: url("i/fonts/Roboto-Symbols.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
